fixed card on iphone 6 to fit image

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -80,7 +80,12 @@ width: 11vw;
   height: 34vmin;
 }
 
+}
 
+@media screen and (max-width: 770px){
+.fit-single-cart{
+height: 30vw
+}
 }
 
 @media screen and (max-width: 667px){
